simple user management (register, sign in/sign out, remember) added on top of oAuth process +basic layout for authorize form

--- a/server/views/ctprofile/error.twig
+++ b/server/views/ctprofile/error.twig
@@ -1,6 +1,6 @@
-{% extends "demo/base.twig" %}
+{% extends "ctprofile/base.twig" %}
 
 {% block content %}
     <h4>Error Retrieving Access Token:</h4>
-    {% include 'demo/_error.twig' %}
+    {% include 'ctprofile/_error.twig' %}
 {% endblock %}
