--- a/server/views/ctauth/base.twig
+++ b/server/views/ctauth/base.twig
@@ -18,8 +18,8 @@
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
 
-        {% include 'analytics.twig' %}
-        {% include 'github.twig' %}
+        <!--{ include 'analytics.twig' %}
+        { include 'github.twig' %}-->
         {% include 'ctauth/header.html' %}
 
         <div id="container">
