--- a/server/views/ctauth/authorize.twig
+++ b/server/views/ctauth/authorize.twig
@@ -1,33 +1,28 @@
 {% extends "ctauth/base.twig" %}
 
 {% block content %}
-    <p>
-        <strong>Demo App</strong> would like to access the following data:
-    </p>
-    <ul>
-        <li>friends</li>
-        <li>memories</li>
-        <li>hopes, dreams, passions, etc.</li>
-        <li>sock drawer</li>
-    </ul>
-    <p>It will use this data to:</p>
-    <ul>
-        <li>integrate with friends</li>
-        <li>make your life better</li>
-        <li>miscellaneous nefarious purposes</li>
-    </ul>
-    <ul class="authorize_options">
-        <li>
-            <form action="{{ path('authorize_post') ~ '?' ~ app.request.queryString }}" method="post">
-                <input type="submit" class="button authorize" value="Yes, I Authorize This Request" />
-                <input type="hidden" name="authorize" value="1" />
-            </form>
-        </li>
-        <li class="cancel">
-            <form id="cancel" action="{{ path('authorize_post') ~ '?' ~ app.request.queryString }}" method="post">
-                <a href="#" onclick="document.getElementById('cancel').submit()">cancel</a>
-                <input type="hidden" name="authorize" value="0" />
-            </form>
-        </li>
-    </ul>
+<div class="row" id="authorize-container">
+    <div id='authorize'>
+        <p>
+            I am here because I try to authenticate to application 
+        </p>
+        <p class="appName">{{ client_id }}</p>
+        <p>and I accept to share my private data inside cortext network to this application.
+        </p>
+        <form action="{{ path('authorize_post') ~ '?' ~ app.request.queryString }}" method="post">
+            <input type="submit" class="button" id="btAuthorize" value="authorize" />
+            <input type="hidden" name="authorize" value="1" />
+        </form>
+    </div>
+    <div id='no-idea' >
+        <p>
+            I have no idea what I am doing here and then certainly is here by mistake. Please do not give access to any of my information.
+        </p>
+        <form  action="{{ path('authorize_post') ~ '?' ~ app.request.queryString }}" method="post">
+            <input type='submit' id="btCancel" class='button' value='cancel'>
+            <input type="hidden" name="authorize" value="0" />
+        </form>
+    </div>
+</div>
+
 {% endblock %}
