add forgot password functions

--- a/server/views/ctauth/base.twig
+++ b/server/views/ctauth/base.twig
@@ -53,7 +53,7 @@
                     <li><span>admin contact</span><a href="mailto:webmaster@cortext.fr">webmaster[at]cortext[dot]fr</a></li>
                     <li><span>website</span><a href="http://www.cortext.fr">www.cortext.fr</a></li>
                     <li><span>version</span><a href="#">V2.0.0/api</a></li>
-                    <li><span>standards</span><a href="http://www.w3.org/TR/html5/">html5+css3 : please use html5-compliant browser !</a>
+                    <li><span>standards</span><a href="http://browsehappy.com/">html5+css3 : please use html5-compliant browser !</a>
                     </li>
                 </ul>
             </div>
