--- a/server/web/css/login.css
+++ b/server/web/css/login.css
@@ -54,19 +54,19 @@ margin-left: 270px;
 width: 750px;
 }
 
-#media-user-info{
+.media-user-info{
 height: 170px;
 border: 1px solid #DCDCDC;
 }
 
-#media-user-info .muted{
+.media-user-info .muted{
 color: #909090;
 font: 15px Arial,sans-serif;
 margin-left: 2px;
 margin-top: 2px;
 }
 
-#media-user-info #gravatar{
+.media-user-info .gravatar{
 border-right: 1px solid #DCDCDC;
 float: left;
 height: 170px;
@@ -74,20 +74,25 @@ width: 170px;
 margin-right:25px;
 }
 
-#media-user-info #gravatar img{
+.media-user-info .gravatar img{
 border: 1px solid #EEF2F6;
 height: 140px;
 margin: 14px auto 0 14px;
 width: 140px;
 }
 
-#media-user-info h1{
+.media-user-info h1{
 color: #3A3A3A;
 font: 22px Arial,sans-serif;
 margin-top: 25px;
 }
 
-.media .user-information{
+.media-user-info .control-label a{
+color: #909090;
+font: 13px Arial,sans-serif;
+
+}
+#content2 .user-information{
 background: url("/images/user.png") no-repeat scroll 725px 7px #EE6E21;
 margin-top: 25px;
 padding-left: 10px;
