--- a/server/web/css/login.css
+++ b/server/web/css/login.css
@@ -162,7 +162,7 @@ font: 14px Arial,sans-serif;
 margin-left: 25px; 
 }
 
-.controls .save-info{
+.controls .save-info, .controls .bt-sign{
     background: #2CC31C;
     border: 1px solid #1D8912;
     color: #FFFFFF;
@@ -174,7 +174,7 @@ margin-left: 25px;
     width: 230px;
 }
 
-.controls .save-info:hover{
+.controls .save-info:hover, .controls .bt-sign:hover{
 background: #27AD19;
 border: 1px solid #1D8912;
 color: #fff;
@@ -208,6 +208,30 @@ margin-left: 30px;
 margin-left: 8px;
 }
 
+.control-group #inputEmail{
+margin-left: 85px;
+}
+
+.control-group #inputPassword{
+margin-left: 60px;
+}
+
+#content2 .info-sign{
+    color: #3A3A3A;
+    font: 22px Arial,sans-serif;
+    letter-spacing: 0.1em;
+    margin-left: 160px;
+    margin-top:100px;
+    margin-bottom: 40px;
+    }
+
+#content2 .infosign{
+    color: #909090;
+    font: 14px Arial,sans-serif;
+    margin-top:35px;
+    } 
+
+
 
 /*forms*/
 
@@ -223,6 +247,7 @@ margin-left: 8px;
     position: relative;
     width: 250px;
     z-index: 2;}
+
 .main #frm_signin span {float: right;width: 205px;position: relative;top: -58px; right: 70px;color: #A3A1A1;font: 12px arial;line-height: 36px;text-align: left; text-transform: lowercase}
 
 .main #frm_signin .name, .main #frm_signin .password {float:left;margin-left:110px;margin-top:8px;}	
