--- a/server/web/css/login.css
+++ b/server/web/css/login.css
@@ -187,6 +187,10 @@ font: 14px Arial,sans-serif;
 margin-left: 25px; 
 }
 
+.controls a:hover{
+color: #3A3A3A;
+}
+
 .control-group{
 margin-top: 15px; 
 margin-left: 50px;
@@ -201,7 +205,7 @@ margin-left: 87px;
 }
 
 .control-group #input-password{
-margin-left: 30px;
+margin-left: 60px;
 }
 
 .control-group #input-confirm-password{
@@ -220,7 +224,7 @@ margin-left: 60px;
     color: #444444;
     font: 20px "Oxygen-Regular";
     letter-spacing: 1.5px;
-    margin-left: 180px;
+    margin-left: 50px;
     margin-top:100px;
     margin-bottom: 40px;
     }
@@ -233,7 +237,27 @@ margin-left: 60px;
 #content2 .infosign a{
     color: #235BBE;
     margin-left:15px;
-    }     
+    }
+#content2 .infosign a:hover{
+    color: #1b2893
+    }
+
+   #content2 .infosign2{
+    color: #3A3A3A;
+    font: 14px Arial,sans-serif;
+    margin-top:35px;
+    margin-left: 50px;
+    }
+
+ #content2 .infosign2 a{
+    color: #235BBE;
+    margin-left:15px;
+    }   
+#content2 .infosign2 a:hover{
+    color: #1b2893
+    }
+
+        
 
 .controls .case{
     height: 14px;
