--- a/server/web/css/login.css
+++ b/server/web/css/login.css
@@ -6,6 +6,14 @@ css for the login page of cortext
 
 #path .dashboard{padding-left:65px;}
 
+
+#header .alert{
+    color: #666667;
+    font: 15px Arial,sans-serif;
+    margin-top: 10px;
+        
+}
+
 #user li{
         list-style: none; display:inline-block;
         padding:0;
@@ -13,11 +21,20 @@ css for the login page of cortext
 }
 
 #user #login-out{
-        background: url("/images/power.png") 34px 30px no-repeat  #9e1d43;
+        background: url("/images/power.png") 26px 30px no-repeat #EEF2F6;
         margin-left: -7px;
         padding-left: 5px;
-        padding-right: 5px;
-        border-bottom: 3px solid #F772BD;
+        padding-right: 10px;
+        border-bottom: 3px solid #9C9C9C;
+}
+
+#user #login-out a{
+        color:#909090;
+
+}
+#user #login-out a:hover{
+        color:#626262;
+
 }
 
 #user #sign{
