--- a/server/web/css/login.css
+++ b/server/web/css/login.css
@@ -82,6 +82,7 @@ display: none;}
 .border-media{
         border:1px solid #E6E6E6;
         padding-bottom: 35px;
+        padding-top: 20px;
 }
 
 .border-media a{
@@ -490,6 +491,47 @@ input[type=submit].authorize{
 	border-radius:2px;
 }
 
+#log-out {
+    background: url("/images/power-bg.png") no-repeat  2px 0px;
+    height: 25px;
+    margin-top: 10px;
+    padding-left: 36px;
+    padding-top: 3px;
+    width: 100px;
+}
+
+#log-out a {
+    color: #909090;
+    font: 14px Arial,sans-serif;
+    text-decoration: none;
+}
+
+#log-out a:hover {
+    color: #666667;
+    font: 14px Arial,sans-serif;
+    text-decoration: underline;
+}
+
+
+#view {
+    background: url("/images/icon-view.png") no-repeat  2px 8px;
+    height: 20px;
+    padding-left: 36px;
+    padding-top: 3px;
+    width: 100px;
+}
+
+#view a {
+    color: #909090;
+    font: 14px Arial,sans-serif;
+    text-decoration: none;
+}
+
+#view a:hover {
+    color: #666667;
+    font: 14px Arial,sans-serif;
+    text-decoration: underline;
+}
 
 
 /*** authorize specifics ***/
