--- a/server/web/css/login.css
+++ b/server/web/css/login.css
@@ -545,6 +545,27 @@ input[type=submit].authorize{
     text-decoration: underline;
 }
 
+#link-user {
+    height: 20px;
+    padding-left: 16px;
+    padding-top: 3px;
+    margin-top: 38px;
+}
+
+#link-user a {
+    background: url("/images/user-icon-grey.png") no-repeat  2px 1px;
+    color: #909090;
+    font: 14px Arial,sans-serif;
+    text-decoration: none;
+    padding-left: 30px;
+}
+
+#link-user a:hover {
+    color: #666667;
+    font: 14px Arial,sans-serif;
+    text-decoration: underline;
+}
+
 
 /*** authorize specifics ***/
 #authorize-container{float:left; width: 765px; margin: auto;height: 200px;}
