--- a/server/views/ctauth/base.twig
+++ b/server/views/ctauth/base.twig
@@ -9,9 +9,11 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+        <!--<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">-->
         <link rel="stylesheet" href="{{ app.request.basePath }}/css/reset.css">
         <link rel="stylesheet" href="{{ app.request.basePath }}/css/login.css">
+        <link rel="stylesheet" href="{{ app.request.basePath }}/css/main.css">
+
 
 
 
@@ -21,33 +23,48 @@
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
 
-        <div id="container"> 
-        <div class="navbar">
-                <div class="navbar-inner">
-                    <ul class="nav">
-                    {% if app.user %}
-                            <li><a href="{{ path('user') }}"><i class="icon-user"></i> {{ app.user.displayName }}</a></li>
-                            <li class="divider-vertical"></li>
-                            <li><a href="{{ path('user.logout') }}"><i class="icon-off"></i> Sign out</a></li>
-                    {% else %}
-                            <li><a href="{{ path('user.login') }}">Sign in</a></li>
-                            <li class="divider-vertical"></li>
-                            <li><a href="{{ path('user.register') }}">Create account</a></li>
-                    {% endif %}
-                        </ul>
-               </div>
-         </div>
-        <header>
-           {% block header %}
-               <img alt="cortext platform logo" src="/images/logo_cortext.png">
-           {% endblock %}
-        </header>
         <div id="content"> 
+
+<div id="header">
+        <div id="menu">
+            <nav id="path">
+                <div class="navbar-inner">
+                    <ul>
+
+                 <li class="home"><a href="#"><img src="/images/home.png" alt="#"/></a></li></a>
+                <li class="dashboard">
+                    <a class="name" href="/dashboard">dashboard</a>
+                </li>
+                 <li class="user">
+                    <span class="type">user</span>
+                    <a class="name" href="/">register</a>
+                </li>
+                    </ul>
+                        </div>   
+                    </nav>
+               
+                        </div>
+                                               
+         <div id="user" class="nav">
+            {% if app.user %}
+            <li id="login-out"><a href="{{ path('user.logout') }}"><i class="icon-off"></i> Sign out</a></li>
+              <li id="user-name"><a href="{{ path('user') }}"><i class="icon-user"></i> {{ app.user.displayName }}</a></li>
+                        
+                    {% else %}
+                        <li><a href="{{ path('user.login') }}">Sign in</a></li>
+                        <li><a href="{{ path('user.register') }}">Create account</a></li>
+
+                    {% endif %}
+                        
+        </div>
+            </div>
+
+
             <div id="main">
                 {% block content %}
                 {% endblock %}
                 </div>
-            </div><!--content-->
+
             <div id="footer">
                 <ul id="contact">
                     <li><span>admin contact</span><a href="mailto:webmaster@cortext.fr">webmaster[at]cortext[dot]fr</a></li>
@@ -57,6 +74,8 @@
                     </li>
                 </ul>
             </div>
-        </div>
+</div><!--content-->
+     
+       
             </body>
         </html>
