--- a/server/web/css/login.css
+++ b/server/web/css/login.css
@@ -12,10 +12,16 @@ display: none;}
 }
 
 
-#header .alert{
+#content2 .alert{
     color: #666667;
     font: 15px Arial,sans-serif;
     margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding: 10px;
+    background: #DCDCDC
         
 }
 
