--- a/server/web/css/login.css
+++ b/server/web/css/login.css
@@ -12,16 +12,16 @@ display: none;}
 }
 
 
-#content2 .alert{
-    color: #666667;
-    font: 15px Arial,sans-serif;
-    margin-top: 10px;
+#content-auth .alert{
+    color: #9E1D43;
+    font: 16px "Oxygen-Regular",sans-serif;
+    margin-top: -10px;
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    padding: 10px;
-    background: #DCDCDC
+    padding: 8px;
+    background-color:#E6E6E6;
         
 }
 
@@ -78,7 +78,7 @@ display: none;}
 
 /*user*/
 
-#content2{margin-top:65px;}
+#content-auth{margin-top:65px;}
 
 .media{
         margin-left: 270px;
@@ -139,7 +139,7 @@ display: none;}
         font: 13px Arial,sans-serif;
 }
 
-#content2 .user-information{
+#content-auth .user-information{
         background: url("/images/user.png") no-repeat scroll 725px 7px #EE6E21;
         margin-top: 25px;
         padding-left: 10px;
@@ -309,7 +309,7 @@ display: none;}
         margin-left: 60px;
 }
 
-#content2 .info-sign{
+#content-auth .info-sign{
         background: url("/images/logo.png") 710px -3px no-repeat  #9C96A7;
         margin-bottom:45px;
         padding-left: 10px;
@@ -321,7 +321,7 @@ display: none;}
         width: 740px;
 }
 
-#content2 .infosign{
+#content-auth .infosign{
         background: url("/images/user-icon.png") 170px 0px no-repeat;
         font: 14px Arial,sans-serif;
         margin-top:35px;
@@ -329,19 +329,19 @@ display: none;}
         color: #3A3A3A;
 }
 
-#content2 .infosign a{
+#content-auth .infosign a{
         color: #909090;
         margin-left:38px;
         font: 14px Arial,sans-serif;
         text-decoration: none; 
 }
 
-#content2 .infosign a:hover{
+#content-auth .infosign a:hover{
         color: #666667;
         text-decoration: underline;
 }
 
-   #content2 .infosign2{
+   #content-auth .infosign2{
         background: url("/images/power-icon.png") 181px -3px no-repeat;
         font: 14px Arial,sans-serif;
         margin-top:35px;
@@ -351,13 +351,13 @@ display: none;}
 
 }
 
- #content2 .infosign2 a{
+ #content-auth .infosign2 a{
         color: #909090;
         margin-left:35px;
         text-decoration: none;
 }   
 
-#content2 .infosign2 a:hover{
+#content-auth .infosign2 a:hover{
         color: #666667;
         text-decoration: underline;
 }
