--- a/server/web/css/login.css
+++ b/server/web/css/login.css
@@ -408,7 +408,22 @@ textarea{height: auto}
         width: 260px;
 }
 
-li.submit_row input, input[type=submit], a.btn{ width : 260px;background: #2F2F2F; border: 1px solid #090909; border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; box-shadow: 0px 0px 3px rgba(0,86,156, 0.6); cursor: pointer; color : white; font:bold 14px arial; margin-bottom: 10px; text-transform: lowercase;}
+li.submit_row input, input[type=submit], a.btn{ 
+    width : 260px;
+    background: #3C3C3C;
+    border: 1px solid #303030;
+    border-radius: 3px; 
+    -moz-border-radius: 3px; 
+    -webkit-border-radius: 3px; 
+    box-shadow: 0px 0px 3px rgba(0,86,156, 0.6); 
+    cursor: pointer; 
+    color : white; 
+    padding: 0 5px;
+    font:bold 14px arial; 
+    margin-bottom: 10px; 
+    margin-left: -5px;
+    text-transform: lowercase;}
+
 input[type=submit].authorize{
         background: none repeat scroll 0 0 #34B02C ! important;
         border: 1px solid #388530;
@@ -418,11 +433,17 @@ input[type=submit].authorize{
         margin-top: 87px;
 }
 
+#btCancel:hover{
+    background: #2F2F2F;
+    border: 1px solid #090909;
+    color: #ffffff;
+    box-shadow: 0px 0px 3px rgba(0,86,156, 0.6);
+}
+
 #btsubmit, #btAuthorize{
         text-decoration: none;
-        margin-left: auto;
-        margin-right: auto;
-        background: none repeat scroll 0 0 #34B02C;
+        margin-left:-5px;
+        background: #34B02C;
         border: 1px solid #388530;
         color: white;
         height: 34px;
@@ -452,8 +473,8 @@ input[type=submit].authorize{
 
 
 /*footer*/
-#footer {margin-top : 300px; width:1280px; clear: both}
-#contact {text-align: center; font : normal 11px arial; color: #999;border-top : 1px solid #eee; width: 600px; margin :auto; text-align: center; display: table}
+#footer {padding-top : 40px; clear: both}
+#contact {text-align: center; font : normal 11px arial; color: #999;padding-top: 15px;border-top : 1px solid #eee; width: 600px; margin :auto; text-align: center; display: table}
 #contact a { display: table-cell; padding-left: 5px; font: normal 11px arial; color: #999; text-decoration: none}
 #contact a:hover { color: #444; text-decoration: none}
 #contact li {margin: 0; height: 20px;}
@@ -575,6 +596,9 @@ input[type=submit].authorize{
 
 
 /*** authorize specifics ***/
-#authorize-container{float:left; width: 765px; margin: auto;height: 200px;}
-#authorize-container div{float:left; width: 250px; padding: 20px; border: 1px solid #eee; min-height: 100%; margin-left: 50px}
-#no-idea{}
+#authorize-container{width: 765px; margin: auto;height: 200px;}
+#authorize-container div{float:left; width: 250px; padding: 20px; border: 1px solid #eee; min-height: 100%; margin-left: 50px;margin-top:25px;}
+#no-idea p{margin-bottom: 23px;}
+
+
+
